# PruebaTG

PruebaGestos/: PruebaGestos.sln
PruebaGestos/PruebaGestos/: CMakeLists.txt  Kinect.cpp  Kinect.h  Prueba.cpp  Prueba.h  PruebaGestos.vcxproj  Visualizacion.cpp  Visualizacion.h  main.cpp
PruebaGestos/PruebaGestos/Controlador/: Kinect.cpp  Kinect.h  Prueba.cpp  Prueba.h
PruebaGestos/PruebaGestos/Vista/: Visualizacion.cpp  Visualizacion.h
